@@ -16,14 +16,22 @@
  */
 package org.apache.lucene.store;
 
+import static java.util.stream.Collectors.toList;
+
 import java.io.IOException;
 import java.nio.file.Path;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.List;
 import java.util.Random;
 import java.util.concurrent.Callable;
+import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.Executors;
 import java.util.concurrent.Future;
+import java.util.function.Supplier;
+import java.util.stream.IntStream;
 import org.apache.lucene.tests.store.BaseDirectoryTestCase;
 import org.apache.lucene.util.Constants;
 import org.apache.lucene.util.NamedThreadFactory;
@@ -171,5 +179,154 @@ public class TestMMapDirectory extends BaseDirectoryTestCase {
     } catch (ExecutionException ee) {
       throw ee.getCause();
     }
+  }
+
+  public void testArenas() throws Exception {
+    Supplier<String> randomGenerationOrNone =
+        () -> random().nextBoolean() ? "_" + random().nextInt(5) : "";
+    // First, create a number of segment specific file name lists to test with
+    var exts =
+        List.of(
+            ".si", ".cfs", ".cfe", ".dvd", ".dvm", ".nvd", ".nvm", ".fdt", ".vec", ".vex", ".vemf");
+    var names =
+        IntStream.range(0, 50)
+            .mapToObj(i -> "_" + i + randomGenerationOrNone.get())
+            .flatMap(s -> exts.stream().map(ext -> s + ext))
+            .collect(toList());
+    // Second, create a number of non-segment file names
+    IntStream.range(0, 50).mapToObj(i -> "foo" + i).forEach(names::add);
+    Collections.shuffle(names, random());
+
+    final int size = 6;
+    byte[] bytes = new byte[size];
+    random().nextBytes(bytes);
+
+    try (var dir = new MMapDirectory(createTempDir("testArenas"))) {
+      for (var name : names) {
+        try (IndexOutput out = dir.createOutput(name, IOContext.DEFAULT)) {
+          out.writeBytes(bytes, 0, bytes.length);
+        }
+      }
+
+      int nThreads = 10;
+      int perListSize = (names.size() + nThreads) / nThreads;
+      List<List<String>> nameLists =
+          IntStream.range(0, nThreads)
+              .mapToObj(
+                  i ->
+                      names.subList(
+                          perListSize * i, Math.min(perListSize * i + perListSize, names.size())))
+              .toList();
+
+      var threadFactory = new NamedThreadFactory("testArenas");
+      try (var executor = Executors.newFixedThreadPool(nThreads, threadFactory)) {
+        var tasks = nameLists.stream().map(l -> new IndicesOpenTask(l, dir)).toList();
+        var futures = tasks.stream().map(executor::submit).toList();
+        for (var future : futures) {
+          future.get();
+        }
+      }
+
+      if (!(dir.attachment instanceof ConcurrentHashMap<?, ?> map)) {
+        throw new AssertionError("unexpected attachment: " + dir.attachment);
+      }
+      assertEquals(0, map.size());
+    }
+  }
+
+  static class IndicesOpenTask implements Callable<Void> {
+    final List<String> names;
+    final Directory dir;
+
+    IndicesOpenTask(List<String> names, Directory dir) {
+      this.names = names;
+      this.dir = dir;
+    }
+
+    @Override
+    public Void call() throws Exception {
+      List<IndexInput> closeables = new ArrayList<>();
+      for (var name : names) {
+        closeables.add(dir.openInput(name, IOContext.DEFAULT));
+      }
+      for (IndexInput closeable : closeables) {
+        closeable.close();
+      }
+      return null;
+    }
+  }
+
+  // Opens more files in the same group than the ref counting limit.
+  public void testArenasManySegmentFiles() throws Exception {
+    var names = IntStream.range(0, 1024).mapToObj(i -> "_001.ext" + i).toList();
+
+    final int size = 4;
+    byte[] bytes = new byte[size];
+    random().nextBytes(bytes);
+
+    try (var dir = new MMapDirectory(createTempDir("testArenasManySegmentFiles"))) {
+      for (var name : names) {
+        try (IndexOutput out = dir.createOutput(name, IOContext.DEFAULT)) {
+          out.writeBytes(bytes, 0, bytes.length);
+        }
+      }
+
+      List<IndexInput> closeables = new ArrayList<>();
+      for (var name : names) {
+        closeables.add(dir.openInput(name, IOContext.DEFAULT));
+      }
+      for (IndexInput closeable : closeables) {
+        closeable.close();
+      }
+
+      if (!(dir.attachment instanceof ConcurrentHashMap<?, ?> map)) {
+        throw new AssertionError("unexpected attachment: " + dir.attachment);
+      }
+      assertEquals(0, map.size());
+    }
+  }
+
+  public void testGroupBySegmentFunc() {
+    var func = MMapDirectory.GROUP_BY_SEGMENT;
+    assertEquals("0", func.apply("_0.doc").orElseThrow());
+    assertEquals("51", func.apply("_51.si").orElseThrow());
+    assertEquals("51-g", func.apply("_51_1.si").orElseThrow());
+    assertEquals("51-g", func.apply("_51_1_gg_ff.si").orElseThrow());
+    assertEquals("51-g", func.apply("_51_2_gg_ff.si").orElseThrow());
+    assertEquals("51-g", func.apply("_51_3_gg_ff.si").orElseThrow());
+    assertEquals("5987654321", func.apply("_5987654321.si").orElseThrow());
+    assertEquals("f", func.apply("_f.si").orElseThrow());
+    assertEquals("ff", func.apply("_ff.si").orElseThrow());
+    assertEquals("51a", func.apply("_51a.si").orElseThrow());
+    assertEquals("f51a", func.apply("_f51a.si").orElseThrow());
+    assertEquals("segment", func.apply("_segment.si").orElseThrow());
+
+    // old style
+    assertEquals("5", func.apply("_5_Lucene90FieldsIndex-doc_ids_0.tmp").orElseThrow());
+
+    assertFalse(func.apply("").isPresent());
+    assertFalse(func.apply("_").isPresent());
+    assertFalse(func.apply("_.si").isPresent());
+    assertFalse(func.apply("foo").isPresent());
+    assertFalse(func.apply("_foo").isPresent());
+    assertFalse(func.apply("__foo").isPresent());
+    assertFalse(func.apply("_segment").isPresent());
+    assertFalse(func.apply("segment.si").isPresent());
+  }
+
+  public void testNoGroupingFunc() {
+    var func = MMapDirectory.NO_GROUPING;
+    assertFalse(func.apply("_0.doc").isPresent());
+    assertFalse(func.apply("_0.si").isPresent());
+    assertFalse(func.apply("_54.si").isPresent());
+    assertFalse(func.apply("_ff.si").isPresent());
+    assertFalse(func.apply("_.si").isPresent());
+    assertFalse(func.apply("foo").isPresent());
+    assertFalse(func.apply("_foo").isPresent());
+    assertFalse(func.apply("__foo").isPresent());
+    assertFalse(func.apply("_segment").isPresent());
+    assertFalse(func.apply("_segment.si").isPresent());
+    assertFalse(func.apply("segment.si").isPresent());
+    assertFalse(func.apply("_51a.si").isPresent());
   }
 }
